# be_penjualan

./: .env  Cargo.toml
src/: lib.rs  main.rs  routes.rs
src/handler/: auth.rs  auth_handler.rs
src/model/: mod.rs  profile_model.rs  table.rs  user_model.rs
src/repository/: profile_repository.rs  user_repository.rs
src/service/: auth_service.rs
src/validation/: auth.rs  auth_validation.rs
