[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
futures = "0.3.31"
sqlx = {version ="0.7",features =["mysql","runtime-tokio-rustls","macros"]}
serde_json = "1.0"
serde = {version ="1.0",features =["derive"]}
validator = { version = "0.19", features = ["derive"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] } # untuk NaiveDateTime
bcrypt = "0.14" 
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4"] }
